# iota

./: README.md  __init__.py  allens_algebra.py  requirements.txt  setup.cfg  test.py
Algebra_Allens/: __init__.py
model/: __init__.py  model.py
