[metadata]
name = Algebra_Allen

author = Ousama Dahbi Sebbaghi
maintainer = Marius Cosmin
summary = implementacion del intervalo del algebra de allen.
description-file = README.md
home-page = https://github.com/PRIS2/iota
license = Apache
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    allens
    interval
    algebra

[options]
python_requires = >=3.6

[files]
packages =
    tendo

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1

